# Omx_Turtle_Bot

./: .gitignore  README.md
omx_rl_control/: README.md  package.xml  setup.cfg  setup.py
omx_rl_control/config/: rl_control.yaml
omx_rl_control/docs/: arm_delivery_runtime_plan.md
omx_rl_control/launch/: rl_control.launch.py  rl_gazebo.launch.py
omx_rl_control/models/converted/: omx_turtlebot.urdf
omx_rl_control/models/mjcf/: omx_turtlebot.xml  omx_turtlebot_smooth.xml
omx_rl_control/models/policies/arm_delivery_residual_v2/: SHA256SUMS  runtime_manifest.yaml
omx_rl_control/models/policies/arm_delivery_residual_v2/evaluation/: full_tower_100.yaml  pick_place_mixed_100.yaml  place_full_tower_100.yaml
omx_rl_control/models/policies/arm_delivery_residual_v3_robot_stay/: SHA256SUMS  policy_metadata.yaml  runtime_manifest.yaml
omx_rl_control/models/policies/arm_delivery_residual_v3_robot_stay/evaluation/: base_stop_robust_100.yaml  full_tower_100.yaml  height_robust_100.yaml  pick_place_mixed_100.yaml  place_full_tower_100.yaml  (+1 more)
omx_rl_control/omx_rl_control/: action_limiter.py  gripper_manager.py  kinematics.py  model_contract.py  observation_builder.py  reference_controller.py  rl_control_node.py  state_machine.py
omx_rl_control/test/: test_gripper_manager.py  test_model_contract.py  test_runtime_parity.py  test_state_machine.py
omx_rl_control/test/data/: policy_golden.yaml
omx_rl_control/tools/: compare_reference_rl.py  gazebo_cycle_runner.py  gazebo_server_batch.py  summarize_gazebo_ab.py
omx_rl_control/worlds/: rl_pick_place.world
(+90 files in other folders)
